# game-of-trains

./: .gitignore  Cargo.toml  README.md
.cargo/: config.toml
.github/workflows/: ci.yml  pages.yml
crates/rail-royale-gd/: Cargo.toml
crates/rail-royale-gd/src/: lib.rs
crates/train-client/: Cargo.toml
crates/train-client/src/: app.rs  audio.rs  fx.rs  game.rs  lib.rs  main.rs  scene.rs  theme.rs  view.rs
crates/train-core/: Cargo.toml
crates/train-core/examples/: selfplay.rs
crates/train-core/src/: geometry.rs  lib.rs  replay.rs  rng.rs  score.rs  sim.rs
crates/train-core/src/battle/: ai.rs  arena.rs  mod.rs  orders.rs  resolve.rs  state.rs  unit.rs
crates/train-server/: Cargo.toml
crates/train-server/src/: main.rs
design/prototype/: rail-royale.dc.html
docs/design/: mvp-brief.md  rail-royale.md
docs/godot/: README.md
docs/learning-rust/: 00-getting-started.md  01-ownership-and-borrowing.md  02-structs-enums-matching.md  03-traits-generics-derive.md  04-error-handling.md  05-collections-and-iterators.md  06-modules-crates-features.md  07-testing.md  08-determinism-and-wasm.md  09-next-steps.md  README.md
godot/: main.gd  main.tscn  project.godot  rail_royale.gdextension
legacy/train-client/src/: main.rs  theme.rs
legacy/train-core-puzzle-src/: config.rs  map.rs  score.rs
legacy/web/: index.html  manifest.webmanifest
scripts/: build-web.sh
web/: index.html  manifest.webmanifest  mq_js_bundle.js  rail_royale.wasm  sw.js
