[workspace]
resolver = "2"
members = ["crates/train-core", "crates/train-client"]
# The retired daily-puzzle crates live under legacy/ (kept for history, not built).
exclude = ["legacy"]

[workspace.package]
version = "0.1.0"
edition = "2021"
license = "MIT"
authors = ["gabrielatango"]
repository = "https://github.com/BryanGabrielAtangana/game-of-trains"

[workspace.dependencies]
train-core = { path = "crates/train-core" }
serde = { version = "1", features = ["derive"] }
serde_json = "1"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
panic = "abort"
