[package]
name = "train-client"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
description = "Game of Trains client: a macroquad renderer for the train-core engine, playable natively and compiled to WebAssembly for the PWA."

[[bin]]
name = "train-client"
path = "src/main.rs"

[dependencies]
train-core = { workspace = true }
# 2D game framework: tiny, cross-platform, first-class WebAssembly support.
macroquad = "0.4"
